Fix text align

--- a/css/main.css
+++ b/css/main.css
@@ -235,7 +235,6 @@ Primary use:
   font-size: 24px;
   color: #aaaaaa;
   line-height: 1.2;
-  text-align: center;
 }
 
 
